- Added status filter component. - improve css

--- a/client/src/styles/main.less
+++ b/client/src/styles/main.less
@@ -1,5 +1,23 @@
 @import './btn.less';
 
+// Global container
+.container {
+  max-width: 75%;
+  margin: 0 auto;
+  padding: 24px;
+  width: 100%;
+  box-sizing: border-box;
+
+  @media (max-width: 1200px) {
+    max-width: 90%;
+  }
+
+  @media (max-width: 768px) {
+    max-width: 100%;
+    padding: 16px;
+  }
+}
+
 // Dialog
 .dialog-overlay {
   position: fixed;
