- move card style to global - fix filter by status for tasks
- code improvements

--- a/client/src/styles/main.less
+++ b/client/src/styles/main.less
@@ -1,4 +1,5 @@
 @import './btn.less';
+@import "./cardCommon.less";
 
 // Global container
 .container {
@@ -399,7 +400,7 @@
   }
 }
 
-
+// Header section
 .header-section {
   display: flex;
   justify-content: space-between;
